--- a/_config.yml
+++ b/_config.yml
@@ -14,13 +14,13 @@ url: "http://gswd.github.io" # the base hostname & protocol for your site
 permalink: /:year/:month/:day/:title/
 
 # other links
-twitter_username: gaohaoyang126
-facebook_username: gaohaoyang.water
-github_username:  Gaohaoyang
+twitter_username:
+facebook_username:
+github_username:  gswd
 email: 66615041@qq.com
-weibo_username: 3115521wh
-zhihu_username: gaohaoyang
-linkedIn_username: gaohaoyang
+weibo_username:
+zhihu_username:
+linkedIn_username:
 dribbble_username:
 
 description_footer: 记录和分享！
