--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 title: LOACH
 brief-intro: Java Dev Engineer
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://gswd.github.io" # the base hostname & protocol for your site
+url: "http://www.hm707.com" # the base hostname & protocol for your site
 
 permalink: /:year/:month/:day/:title/
 
